add android-8.0.0_r1 with android/platform/frameworks/base/android-8.0.0_r1 from https://android.googlesource.com, but rm the file for > 1M, e.g. bz2/mp3/wav/bmp/zip/ and so on